--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ footer {
   text-align: center;
 }
 
+.group {
+  display: flex;
+  flex-direction: row;
+}
 /* Other page elements */
 hr {
   border: 1px solid black;
