--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ footer {
 .group {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 /* Other page elements */
 hr {
