--- a/style.css
+++ b/style.css
@@ -30,12 +30,7 @@ div {
 }
 
 header div {
-  text-align: center;
-  padding-left: 0px;
-  padding-right: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
-  box-sizing: content-box;
+  width: 450px;
 }
 
 article {
