--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h3 {
 /* Header */
 header {
   text-align: center;
-  margin-right: 0px;
+  width: 450px;
 }
 
 /* Containers */
@@ -27,10 +27,7 @@ div {
   background-color: #eae2b7;
   margin: auto;
   width: 600px;
-}
-
-header div {
-  width: 450px;
+  /* box-sizing: border-box; */
 }
 
 article {
@@ -54,10 +51,6 @@ a:link {
 
 a:hover {
   color: #f77f00;
-}
-
-nav {
-  margin-left: 0px;
 }
 
 nav a {
