--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ h3 {
 /* Header */
 header {
   text-align: center;
+  width: 100%;
+}
+
+header div {
+  text-align: center:
 }
 
 /* Containers */
@@ -51,6 +56,10 @@ a:hover {
   color: #f77f00;
 }
 
+nav {
+  width: 100%;
+}
+  
 nav a {
   padding-left: 20px;
 }
