--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ div {
 }
 
 header div {
+  box-sizing: border-box;
   margin-left: 0px;
   margin-right: 0px;
-  width: 350 px;
+  width: 350px;
 }
 
 article {
