--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ hr {
 }
 
 section {
-  padding-top: 0%;
-  margin-top: 0%;
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+.portfolio-text {
+  font-size: 14;
 }
